--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,7 @@ cover/
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
+../../Documents/homework__nikita__voloshyn__django__basic/db.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
@@ -123,7 +123,6 @@ celerybeat.pid
 .env
 .venv
 env/
-../homework__nikita__voloshyn__08__flask/venv/
 ENV/
 env.bak/
 venv.bak/
