--- a/.env.homework
+++ b/.env.homework
@@ -3,3 +3,11 @@ DJANGO__SECRET_KEY="L8vH2cfZ7PDeds6RnB5#GU$Kq3wEYkFutXJTza+jgxQrMh%y(pWC*VS&NA^!
 
 #DJANGO__ALLOWED_HOSTS=mysite.com,another.site.com,
 DJANGO__ALLOWED_HOSTS=
+
+#POSTGRES_HOST=postgres
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+
+POSTGRES_DB='django_db'
+POSTGRES_USER='django_user'
+POSTGRES_PASSWORD='SEzHcAz73degvDxh36BypFePXsTBJKWY'
