--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -1,10 +1,11 @@
 version: '3.9'
 
-
 services:
   app:
     ports:
       - "8000:8000"
-    volumes:
-      - ./db:/wd/db:rw
     user: "${UID}"
+
+  postgres:
+    ports:
+      - "5432:5432"
