--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,24 @@
 version: '3.9'
 
+volumes:
+  postgres_data: { }
 
 services:
   app:
     build: .
-    #    environment:
-    #      - DJANGO__DEBUG=True
+    environment:
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
     env_file:
       - .env
+    depends_on:
+      - postgres
+
+  postgres:
+    image: postgres:15.4
+    environment:
+        - POSTGRES_USER=${POSTGRES_USER}
+        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+        - POSTGRES_DB=${POSTGRES_DB}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data:rw
